--- a/package.json
+++ b/package.json
@@ -4,12 +4,25 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "astro dev && searchify",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "searchify": "node searchify.mjs"
   },
   "dependencies": {
-    "astro": "^4.1.1"
+    "@sendgrid/mail": "^8.1.3",
+    "@sendinblue/client": "^3.3.1",
+    "astro": "^4.1.1",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.7.2",
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.4.5",
+    "highlight.js": "^11.9.0",
+    "nodemailer": "^6.9.13",
+    "postcss": "^8.4.33",
+    "prismjs": "^1.29.0",
+    "sib-api-v3-sdk": "^8.5.0",
+    "tailwindcss": "^3.4.1"
   }
 }
